--- a/src/components/FeaturedMovie.css
+++ b/src/components/FeaturedMovie.css
@@ -10,4 +10,64 @@
     width: inherit;
     height: inherit;
     background: linear-gradient(to right, #111 30%, transparent 70%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 30px;
+    padding-bottom:150px ;
+    padding-top: 70px;
+}
+.featured--name{
+    font-size: 60px;
+    font-weight: bold;
+}
+.featured--info{
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 15px;
+}
+.featured--points,
+.featured--year, 
+.featured--seasons{
+    display: inline-block;
+    margin-right: 15px;
+}
+.featured--points{
+    color: #46d369;
+}
+.featured--description{
+    margin-top: 15px;
+    font-size: 20px;
+    color: #999;
+    max-width: 40%;
+    margin-bottom: 15px;
+}
+.featured--watchButton,
+.featured--myListButton{
+    display: inline-block;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 12px 25px;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-right: 10px;
+    opacity: 1;
+}
+.featured--watchButton:hover,
+.featured--myListButton:hover{
+    opacity: 0.7;
+    transition: all ease 0.2s;
+}   
+.featured--watchButton{
+    background-color: #FFF;
+    color: #000;
+}
+.featured--myListButton{
+    background-color: #333;
+    color: #FFF;
+}
+.featured--genres{
+    margin-top: 15px;
+    font-size: 18px;
+    color: #999;
 }
