--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -9,7 +9,7 @@
     padding-left: 30px;
 }
 .movieRow--list{
-    width: 99999999px;
+    transition: 0.5s;
 }
 .movieRow--item{
     display: inline-block;
@@ -23,4 +23,37 @@
 }
 .movieRow--item img:hover{
     transform: scale(1);
+}
+.movieRow--left,
+.movieRow--right
+{
+    position: absolute;
+    width: 40px;
+    height: 225px;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    cursor: pointer;
+    opacity: 0;
+    transition: all ease 0.5s;
+}
+.movieRow--left{
+    left: 0;
+}
+.movieRow--right{
+    right: 0;
+}
+.movieRow:hover .movieRow--left,
+.movieRow:hover .movieRow--right{
+opacity: 1;
+}
+
+@media (max-width: 760px) {
+    .movieRow--left,
+    .movieRow--right{
+        opacity: 1;
+    }
 }
